refactor(exams): restructing lifecycle
